--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,13 +40,13 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: dist
+          path: ./dist
       - name: Setup Pages
         uses: actions/configure-pages@v1
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
-          path: 'dist/'
+          path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
