Add Vite BASE_URL env in prod

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,6 +17,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      BASE_URL: /3d-qr-code-generator/
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
